--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -27,7 +27,7 @@ html
         script(src='/data/flot-data.js')
         script(src='/isu/js/postcode.js')
         
-        script(src='/util/download.js')
+        //script(src='/util/download.js')
         
         
 
