--- a/app/views/company/edit.jade
+++ b/app/views/company/edit.jade
@@ -23,6 +23,10 @@ block head
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
+    // postcode
+    script(src='/isu/js/postcode.js')
+    //http용
+    script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
 
 block content
       // ==============================================================
@@ -45,61 +49,71 @@ block content
                   h4.page-title 회사정보 수정
             .row
               .col-sm-12
-                button.btn.btn-primary.btn-sm.btn-signup(onclick="location.href='/company/list'") 목록      
-                button.btn.btn-primary.btn-sm.btn-info(onclick="location.href='/company/#{company._id}/edit'") 수정
-                button.btn.btn-success.btn-sm(type='submit') 저장 
-                button.btn.btn-primary.btn-sm.btn-danger(onclick="location.href='/company/#{company._id}/delete'" id="deleteBtn") 삭제
-            .row
-              .col-sm-12
                 .card-box
                   .p-20
-                    form.form-horizontal.group-border-dashed(name='form')
-                      .form-group
-                        label.col-sm-3.control-label 회사코드
-                        .col-sm-3
-                          input.form-control(type='text', name='company[com_cd]', readonly value='#{company.com_cd}', placeholder='')
-                      .form-group
-                        label.col-sm-3.control-label 회사명
-                        .col-sm-3
-                          input.form-control(type='text', name='company[com_nm]', value='#{company.com_nm}', placeholder='')
-                      .form-group
-                        label.col-sm-3.control-label 업태
-                        .col-sm-3
-                          input.form-control(type='text', name='company[type]', value='#{company.type}',placeholder='')
-                      .form-group
-                        label.col-sm-3.control-label 대표이사명
-                        .col-sm-3
-                          input.form-control(type='text', name='company[ceo_nm]', value='#{company.ceo_nm}', placeholder='')
-                      .form-group
-                        label.col-sm-3.control-label 전화번호
-                        .col-sm-3
-                          input.form-control(type='text', name='company[telno]', value='#{company.telno}', placeholder='')
-                      .form-group
-                        label.col-sm-3.control-label 팩스번호
-                        .col-sm-3
-                          input.form-control(type='text', name='company[faxno]', value='#{company.faxno}',placeholder='')
-                      .form-group
-                        label.col-sm-3.control-label 회사주소1
-                        .col-sm-2
-                          input.form-control(type='text', name='company[zip_cd]', value='#{company.zip_cd}',placeholder='')
-                        .col-sm-5
-                          input.form-control(type='text', name='company[addr]', value='#{company.addr}',placeholder='')
-                        .col-sm-2
-                          span.btn.btn-sm.btn-primary(id='postcode') 우편번호 찾기
-                      .form-group
-                        label.col-sm-3.control-label 회사주소2
-                        .col-sm-7
-                          input.form-control(type='text', name='company[addr2]', value='#{company.addr2}',placeholder='')
-                      .form-group
-                        label.col-sm-3.control-label 비고
-                        .col-sm-7
-                          input.form-control(type='text', name='company[bigo]', value='#{company.bigo}',placeholder='')
-                      .form-group
-                        .col-sm-offset-3.col-sm-9.m-t-30
-                          button.btn.btn-lg.btn-primary.waves-effect.waves-light(type='submit')
-                            | 저장 
-                            i.fa.fa-send.m-l-10
-                          button.btn.btn-lg.btn-default.waves-effect.m-l-5(type='reset') 취소
+                    .btn-toolbar.form-group
+                      form.form-horizontal.group-border-dashed(name='form' action='/company/#{company._id}/edit' method='post')
+                        .pull-left
+                          button.btn.btn-default.waves-effect.waves-light.m-l-5(onclick="location.href='/company/list'")
+                            i.fa.fa-list-ul
+                            |  목록
+                          button.btn.btn-success.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/edit'") 
+                            i.fa.fa-edit
+                            |  수정
+                          button.btn.btn-inverse.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/delete'" id="deleteBtn") 
+                            i.fa.fa-remove
+                            |  삭제
+                        .pull-right
+                          button.btn.btn-primary.waves-effect.waves-light(type='submit')
+                            i.fa.fa-send-o
+                            |  저장
+                          button.btn.btn-default.waves-effect.m-l-5(type='reset') 
+                            i.fa.fa-undo
+                            |  취소
+                    hr    
+                    form.form-horizontal.group-border-dashed
+                        .form-group
+                          label.col-sm-3.control-label 회사코드
+                          .col-sm-3
+                            input.form-control(type='text', name='company[com_cd]', readonly value='#{company.com_cd}', placeholder='')
+                        .form-group
+                          label.col-sm-3.control-label 회사명
+                          .col-sm-3
+                            input.form-control(type='text', name='company[com_nm]', value='#{company.com_nm}', placeholder='')
+                        .form-group
+                          label.col-sm-3.control-label 업태
+                          .col-sm-3
+                            input.form-control(type='text', name='company[type]', value='#{company.type}',placeholder='')
+                        .form-group
+                          label.col-sm-3.control-label 대표이사명
+                          .col-sm-3
+                            input.form-control(type='text', name='company[ceo_nm]', value='#{company.ceo_nm}', placeholder='')
+                        .form-group
+                          label.col-sm-3.control-label 전화번호
+                          .col-sm-3
+                            input.form-control(type='text', name='company[telno]', value='#{company.telno}', placeholder='')
+                        .form-group
+                          label.col-sm-3.control-label 팩스번호
+                          .col-sm-3
+                            input.form-control(type='text', name='company[faxno]', value='#{company.faxno}',placeholder='')
+                        .form-group
+                          label.col-sm-3.control-label 회사주소1
+                          .col-sm-2
+                            input.form-control(type='text', id='zip_cd' name='company[zip_cd]', value='#{company.zip_cd}',placeholder='')
+                          .col-sm-5
+                            input.form-control(type='text', id='addr' name='company[addr]', readonly value='#{company.addr}',placeholder='')
+                          .col-sm-2
+                            span.btn.btn-sm.btn-primary(id='postcode') 우편번호 찾기
+                        .form-group
+                          label.col-sm-3.control-label 회사주소2
+                          .col-sm-7
+                            input.form-control(type='text', id='addr2' name='company[addr2]', value='#{company.addr2}',placeholder='')
+                        .form-group
+                          label.col-sm-3.control-label 비고
+                          .col-sm-7
+                            input.form-control(type='text', name='company[bigo]', value='#{company.bigo}',placeholder='')
+                        .form-group  
+           
             // end row
           // end container
         // end content
