--- a/app/views/company/new.jade
+++ b/app/views/company/new.jade
@@ -1,32 +1,32 @@
 extends ../layouts/default
 block head
-            meta(charset='utf-8')
-            meta(name='viewport', content='width=device-width,initial-scale=1')
-            meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
-            meta(name='author', content='Coderthemes')
-            link(rel='shortcut icon', href='assets/images/favicon_1.ico')
-            title 4-3 회사정보 입력
-            link(href='/plugins/dropzone/dist/dropzone.css', rel='stylesheet', type='text/css')
-            link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
-            link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
-            link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-            link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
-            link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
-            link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
-            link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
-            link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
-            link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
-            script(src='/assets/js/modernizr.min.js')
-            // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
-            // WARNING: Respond.js doesn't work if you view the page via file://
-            //if lt IE 9
-            script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
-            script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width,initial-scale=1')
+    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
+    meta(name='author', content='Coderthemes')
+    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
+    title 4-3 회사정보 입력
+    link(href='/plugins/dropzone/dist/dropzone.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/modernizr.min.js')
+    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+    // WARNING: Respond.js doesn't work if you view the page via file://
+    //if lt IE 9
+    script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+    script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
-            // postcode
-            script(src='/isu/js/postcode.js')
-            //http용
-            script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
+    // postcode
+    script(src='/isu/js/postcode.js')
+    //http용
+    script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
                         
 block content
       // ==============================================================
@@ -94,10 +94,10 @@ block content
                           input.form-control(type='text', name='company[bigo]', placeholder='')
                       .form-group
                         .col-sm-offset-3.col-sm-9.m-t-30
-                          button.btn.btn-lg.btn-primary.waves-effect.waves-light(type='submit')
+                          button.btn.btn-primary.waves-effect.waves-light(type='submit')
                             | 저장 
                             i.fa.fa-send.m-l-10
-                          button.btn.btn-lg.btn-default.waves-effect.m-l-5(type='reset') 취소
+                          button.btn.btn-default.waves-effect.m-l-5(type='reset') 취소
             // end row
           // end container
         // end content
