--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -53,7 +53,7 @@ html
                 li
                   a.waves-effect(href='/question/new') 문의하기
                 li
-                  a.waves-effect(href='/question/') 처리진행현황
+                  a.waves-effect(href='/incident/index') 처리진행현황
                 li
                   a.waves-effect(href='/account/') 자주묻는질문과답
                 form.navbar-left.app-search.pull-left.hidden-xs(role='search')
