--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -1,57 +1,102 @@
 extends ../layouts/default
 block head
-    script(src='/views/incident/index.js')
-block content
-    div.alert.alert-danger.alert-dismissible(style='display:none')
-      a.close(href='#', data-dismiss='alert')
-      strong 
-      |  검색어를 입력하세요!!!
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width,initial-scale=1')
+    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
+    meta(name='author', content='Coderthemes')
+    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
+    title 4-3 회사정보 입력
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/modernizr.min.js')
+    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+    // WARNING: Respond.js doesn't work if you view the page via file://
+    //if lt IE 9
+    script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+    script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
-    p
-    div.container-fluid
-        div.row
-            div.col-md-8
-            div.col-md-2
-                input.form-control(type='text' id='searchText' name='searchText')
-            div.col-md-2   
-                div.dropdown
-                    button.btn.btn-default.dropdown-toggle(type='button' data-toggle='dropdown' style='width:100%') 검색유형
-                        span.span.caret
-                    ul.dropdown-menu.dropdown-menu(role='menu', aria-labelledby='menu1')
-                        li(role='presentation')
-                            a(role='menuitem', tabindex='-1', href='#' data-type='title,content') 제목,본문
-                        li(role='presentation')
-                            a(role='menuitem', tabindex='-1', href='#' data-type='title') 제목
-                        li(role='presentation')
-                            a(role='menuitem', tabindex='-1', href='#' data-type='content') 본문
-                        //li(role='presentation')
-                        //    a(role='menuitem', tabindex='-1', href='#' data-type='작성자') 작성자
-                        //li.divider(role='presentation')
-                        //li(role='presentation')
-                        //    a(role='menuitem', tabindex='-1', href='#') About Us                            
-                        //button.btn.btn-primary.btn-info(onclick='search()') 조회
-        div.row
-            div.col-md-12
-                table.table.table-striped
+    // jQuery
+    script(src='assets/js/jquery.min.js')
+    script(src='assets/js/bootstrap.min.js')
+    script(src='assets/js/detect.js')
+    script(src='assets/js/fastclick.js')
+    script(src='assets/js/jquery.slimscroll.js')
+    script(src='assets/js/jquery.blockUI.js')
+    script(src='assets/js/waves.js')
+    script(src='assets/js/wow.min.js')
+    script(src='assets/js/jquery.nicescroll.js')
+    script(src='assets/js/jquery.scrollTo.min.js')
+    script(src='../plugins/switchery/switchery.min.js')
+    script(src='assets/js/jquery.core.js')
+    script(src='assets/js/jquery.app.js')
+
+    script(src='/vendor/jquery/jquery.min.js')
+    script(src='/views/incident/index.js')      
+
+block content
+      // ==============================================================
+      // Start right Content here
+      // ==============================================================
+      .content-page
+        // Start content
+        .content
+          .container
+            // Page-Title
+            .row
+              .col-sm-12
+                .page-title-box
+                  ol.breadcrumb.pull-right
+                    li
+                      a(href='#') Home
+                    li
+                      a(href='#') 문의 및 담당자
+                    li.active 처리진행현황
+                  h4.page-title 처리진행현황 목록
+            .row
+              .col-sm-12
+                .card-box
+                  .btn-toolbar.form-group
+                    .pull-right
+                      a.btn.btn-default.waves-effect.waves-light.m-l-5(href='/incident/new/문의하기')
+                        i.fa.fa-pencil
+                        |  문의
+                  table.table.table-hover(id='dvData' data-tablesaw-mode='swipe')
                     thead
-                        tr
-                            th Num     
-                            th.stretch Title    
-                            th Content      
-                            th Date     
-                            th Author 
+                      tr
+                        th 제목
+                        th(width='15%') 등록일
+                        th(width='13%') 요청경로
+                        th(width='15%') 진행구분
+                        th(width='10%') 담당자
+                        th(width='15%') 접수(완료)일
                     tbody
                         - if (incident.length > 0) {
-                            // - for( var i = 0 ; length = incident.length > i ; i++ ){ //속도가 빠르다고 알고 있음.
+                            // - for( var i = 0 ; length = question.length > i ; i++ ){ //속도가 빠르다고 알고 있음.
                             - for( var i in incident ){ //속도가 느리다고 알고 있음.
                                 tr(onclick="onclick=location.href='/incident/#{incident[i]._id}/show'")
-                                    td  #{incident[i].numId}  
-                                    td.highlight(data-highlight='search.highlight.title') #{incident[i].title}
-                                    td #{incident[i].content}
-                                    td #{incident[i].createdAt}
-                                    td #{incident[i].views}
+                                    td  #{incident[i].title}  
+                                    td.highlight(data-highlight='search.highlight.title') #{incident[i].createdAt}
+                                    td #{incident[i].course_flag}
+                                    td #{incident[i].process_flag}
+                                    td #{incident[i].manager_sabun}
+                                    td #{incident[i].complete_date}
                             - }
                         - }else{
                             tr
                                 td(colspan='5' align='center') 조회된 데이타가 없습니다.
-                        - }
+                        - }  
+            // end row
+          // end container
+        // end content
+        footer.footer.text-right
+          | 2017 © ISU Group.
+      // ==============================================================
+      // End Right content here
+      // ==============================================================
+    // END wrapper
