--- a/app/views/company/list.jade
+++ b/app/views/company/list.jade
@@ -68,10 +68,10 @@ block content
                         |  추가
                       button.btn.btn-primary.waves-effect.waves-light.m-l-5(id='btnExport' onclick="fnTableToExcel(document.getElementById('dvData'));") 
                         i.fa.fa-download
-                        |  ExcelDownload
+                        |  Excel
                       button.btn.btn-success.waves-effect.waves-light.m-l-5(onclick="getJsonData();") 
                         i.fa.fa-arrow-circle-o-down
-                        |  JsonDataDownload
+                        |  JsonData
                   table.table.table-hover(id='dvData' data-tablesaw-mode='swipe')
                     thead
                       tr
